--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^2.2.1",
     "karma": "^1.1.0",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-mocha-reporter": "^2.0.4",
     "karma-sourcemap-loader": "^0.3.7",
